# ProductBoardMCP

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
src/: __main__.py  api.py  helpers.py  server.py
tests/: conftest.py  helpers.py  test_custom_fields.py  test_features.py  test_initiatives.py  test_notes.py  test_objectives.py  test_products.py  test_releases.py
